# DonutEx

./: .gitignore  CMakeLists.txt  CMakeLists.windows.txt  CursorUtils.cpp  CursorUtils.hpp  Dockerfile.linux  Dockerfile.windows  EditorCommands.cpp  EditorCommands.hpp  EditorRenderer.cpp  EditorRenderer.hpp  FileExplorer.cpp  FileExplorer.hpp  FileOperations.cpp  FileOperations.hpp  IconManager.cpp  IconManager.hpp  LuaBindings.cpp  LuaBindings.hpp  OutputPanel.cpp  OutputPanel.hpp  PieceTable.cpp  PieceTable.hpp  README.md  TextEditor.cpp  TextEditor.hpp  docker-compose.yml  main.cpp  mingw-toolchain.cmake
plugins/: autocomplete.lua  config.lua  lang_cpp.lua
